add readStatusBtn and small changes to removeBtn

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </label><br>
       <button class="btn-save-book">Save book</button>
     </div>
+    <div class="cards-container"></div>
   </div>
   <script src="main.js"></script> 
 </body>
