Implement AddBooktoLibrary, add basic styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <button class="btn-add-book">Add Book</button>
+    <button class="btn-add-book btn">Add Book</button>
     <div class="book-form">
       <label for="book-title">
         Title
@@ -30,11 +30,11 @@
       <p>Already read?</p>
       <label for="book-read-true">
         Yes
-        <input type="radio" name="book-read" id="book-read-true">
+        <input type="radio" name="book-read" id="book-read-true" value="true">
       </label>
       <label for="book-read-false">
         No
-        <input type="radio" name="book-read" id="book-read-false">
+        <input type="radio" name="book-read" id="book-read-false" value="false">
       </label><br>
       <button class="btn-save-book">Save book</button>
     </div>
