add some styling to bookForm

--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
       <label for="book-title">
         Title
         <input type="text" name="book-title" id="book-title">
-      </label><br>
+      </label>
       <label for="book-author">
         Author
         <input type="text" name="book-author" id="book-author">
-      </label><br>
+      </label>
       <label for="book-description">
         Description
         <input type="text" name="book-description" id="book-description">
-      </label><br>
+      </label>
       <label for="book-pages">
         Number of pages
         <input type="number" name="book-pages" id="book-pages">
-      </label><br>
+      </label>
       <p>Already read?</p>
-      <label for="book-read-true">
+      <label for="book-read-true" class="radio-btns">
         Yes
         <input type="radio" name="book-read" id="book-read-true" value="true">
       </label>
-      <label for="book-read-false">
+      <label for="book-read-false" class="radio-btns">
         No
         <input type="radio" name="book-read" id="book-read-false" value="false">
-      </label><br>
-      <button class="btn-save-book">Save book</button>
+      </label>
+      <button class="btn-save-book btn">Save book</button>
     </div>
     <div class="cards-container"></div>
   </div>
